[package]
name = "bearssl-sys"
version = "0.1.0"
authors = ["SpiderOak, Inc."]
license = "MIT"
description = "BearSSL FFI bindings"
repository = "https://github.com/spideroak-inc/bearssl"
links = "bearssl"
readme = "README.md"
categories = ["cryptography", "external-ffi-bindings"]
edition = "2021"
include = [
    "/*.md",
    "/*.toml",
    "/build.rs",
    "/src",
]

[build-dependencies]
bindgen = { version = "0.65", default-features = false, features = ["runtime"] }
