[package]
name = "aranya-bearssl-sys"
version = "0.1.0"
authors = ["SpiderOak, Inc."]
license = "MIT"
description = "BearSSL FFI bindings"
repository = "https://github.com/aranya-project/aranya-bearssl-sys"
links = "bearssl"
readme = "README.md"
categories = ["cryptography", "external-ffi-bindings"]
edition = "2021"
include = [
    "/*.md",
    "/*.toml",
    "/build.rs",
    "/src",
]

[build-dependencies]
bindgen = { version = "0.70", default-features = false, features = ["runtime"] }
cc = { version = "1.0.79", features = ["parallel"] }
glob = "0.3.1"
